# pdfdown

./: .gitattributes  .gitignore  Cargo.toml  README.md  agents.md  browser.js  index.d.ts  index.js  package.json  pdfdown.wasi-browser.js  pdfdown.wasi.cjs
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
ocr/: README.md  ava.config.mjs  index.d.ts  index.js  package.json  tsconfig.json
ocr/__test__/: index.spec.ts
src/: lib.rs  types.rs
src/core/: document.rs  images.rs  meta.rs  mod.rs  ocr.rs  render.rs  text.rs
