
[package]
edition = "2024"

name    = "pdfdown"
version = "0.6.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayro-jpeg2000 = { version = "0.3.1", features = ["image"] }
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
lopdf = "0.39"
napi = { version = "3.0.0", features = ["napi6"] }
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
